- `control-panel`: new commandline interface for control panel functions
- `uniform-unstick`: (reinstated) force squad members to drop items that they picked up in the wrong order so they can get everything equipped properly

## New Features
- `uniform-unstick`: add overlay to the squad equipment screen to show a equipment conflict report and give you a one-click button to fix

## Fixes
- `warn-stranded`: Automatically ignore citizens who are gathering plants or digging to avoid issues with gathering fruit via stepladders and weird issues with digging
- `warn-stranded`: Update onZoom to use df's centering functionality
- `ban-cooking`: fix banning creature alcohols resulting in error
- `confirm`: properly detect clicks on the remove zone button even when the unit selection screen is also open (e.g. the vanilla assign animal to pasture panel)

## Misc Improvements
- `gui/control-panel`: reduce frequency for `warn-stranded` check to once every 2 days
- `gui/control-panel`: tools are now organized by type: automation, bugfix, and gameplay
- `confirm`: updated confirmation dialogs to use clickable widgets and draggable windows
- `confirm`: added confirmation prompt for right clicking out of the trade agreement screen (so your trade agreement selections aren't lost)
- `confirm`: added confirmation prompts for irreversible actions on the trade screen
- `confirm`: added confirmation prompt for deleting a uniform
- `confirm`: added confirmation prompt for convicting a criminal
- `confirm`: added confirmation prompt for re-running the embark site finder
- `confirm`: added confirmation prompt for reassigning or clearing zoom hotkeys
- `gui/autobutcher`: interface redesigned to better support mouse control
- `gui/launcher`: now persists the most recent 32KB of command output even if you close it and bring it back up
- `gui/quickcmd`: clickable buttons for command add/remove/edit operations

## Removed

# 50.11-r4

## New Tools